fix link on mobile safari

--- a/src/styles/modules/_button.scss
+++ b/src/styles/modules/_button.scss
@@ -18,6 +18,7 @@ button {
 .filled {
   background: #fbbebe;
   border: 4px solid #fbbebe;
+  color: black;
 
   &:hover {
     opacity: 0.8;
